massive changes to index

--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
 
   <div id="header"></div>
 
-  stuff
+  <div class="index">
+    <div class="within-index">
+      <div class="login-container">
+	<img src="img/keyboard.jpg">
+	
+	<label for="uname"><b>Username</b></label>
+	<input text="text" placeholder="Enter username" name="uname" required>
+
+	<label for="password"><b>Password</b></label>
+	<input text="text" placeholder="Enter password" name="password" required>
+
+	<button type="submit">Login</button>
+	
+      </div>
+    </div>
+  </div>
+
   
   <div id="footer"></div>
   
