--- a/header.html
+++ b/header.html
@@ -1,12 +1,12 @@
 <header id="myHeader">
+  <div>
+    <h2>Kickstarter Goalie</h2>
+  </div>
   <nav class="links">
     <a href="index.html">Home</a>
     <a href="project.html">Project</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
-  <div class="image">
-    <img src="img/keyboard.jpg">
-  </div>
 </header>
 
