added join button

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
   <div class="index">
     <div class="within-index">
+      <!-- login -->
       <div class="login-container">
 	<img src="img/keyboard.jpg">
 	
@@ -39,8 +40,19 @@
 	<input text="text" placeholder="Enter password" name="password" required>
 
 	<button type="submit">Login</button>
-	
       </div>
+
+      <!-- comment -->
+      <div class="text-container">
+	<div class="line">
+	  <h2>Will you reach your Kickstarter goal?</h2>
+	</div>
+	<div class="line">
+	  <h2>Join today to see if you'll score!</h2>
+	</div>
+	<button type="newmember">Join</button>
+      </div>
+      
     </div>
   </div>
 
