updated main page, login link

--- a/index.html
+++ b/index.html
@@ -30,29 +30,19 @@
   <div class="index">
     <div class="within-index">
       <!-- login -->
-      <div class="login-container">
+      <div class="join-container">
 	<img src="img/keyboard.jpg">
 	
-	<label for="uname"><b>Username</b></label>
-	<input text="text" placeholder="Enter username" name="uname" required>
-
-	<label for="password"><b>Password</b></label>
-	<input text="text" placeholder="Enter password" name="password" required>
-
-	<button type="submit">Login</button>
-      </div>
-
-      <!-- comment -->
-      <div class="text-container">
 	<div class="line">
 	  <h2>Will you reach your Kickstarter goal?</h2>
 	</div>
 	<div class="line">
 	  <h2>Join today to see if you'll score!</h2>
 	</div>
-	<button type="newmember">Join</button>
+	<a href="https://kickstart-prediction.herokuapp.com/">
+	  Join today!
+	</a>
       </div>
-      
     </div>
   </div>
 
