--- a/footer.html
+++ b/footer.html
@@ -4,5 +4,6 @@
     <a href="project.html">Project</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
+    <a href="https://kickstart-prediction.herokuapp.com/">Login</a>
   </nav>
 </footer>
