--- a/header.html
+++ b/header.html
@@ -7,6 +7,7 @@
     <a href="project.html">Project</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
+    <a href="https://kickstart-prediction.herokuapp.com/">Login</a>
   </nav>
 </header>
 
