--- a/header.html
+++ b/header.html
@@ -1,13 +1,15 @@
 <header id="myHeader">
-  <div>
+  <div class="header-nav">
     <h2>Kickstarter Goalie</h2>
+    <nav class="links">
+      <a href="index.html">Home</a>
+      <a href="project.html">Project</a>
+      <a href="reviews.html">Reviews</a>
+      <a href="about.html">About</a>
+      <a href="https://kickstart-prediction.herokuapp.com/">Login</a>
+    </nav>
   </div>
-  <nav class="links">
-    <a href="index.html">Home</a>
-    <a href="project.html">Project</a>
-    <a href="about.html">About</a>
-    <a href="reviews.html">Reviews</a>
-    <a href="https://kickstart-prediction.herokuapp.com/">Login</a>
-  </nav>
+  <div class="header-img">
+  </div>
 </header>
 
