--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
   <nav>
     <a href="#">Home</a>
     <a href="#">About</a>
-    <a href="#">Products</a>
-    <a href="#">Contact</a>
+    <a href="#">Overview</a>
+    <a href="https://kickstart-prediction.herokuapp.com/">Login</a>
   </nav>
 </section>
 
@@ -35,24 +35,87 @@
 </div>
 
 <div class="statement">
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed augue mauris, accumsan ut ultrices at, aliquet eget
-    ligula. Nam eu ante scelerisque, ornare dui ut, condimentum nisl. Donec tempor dolor non vehicula tempus. Sed
-    fermentum purus ac sollicitudin mollis. Curabitur ut erat sollicitudin, eleifend massa imperdiet, laoreet nisi.
-    Proin porta placerat leo, in gravida erat molestie sed. Cras dictum ex vel odio rhoncus, sit amet condimentum ex
-    ultrices.</p>
+  <p>Don't you just hate it when you can't predict whether or not a Kickstarter campaign will reach it's goal? Well,
+    that's what we're here to help with. Our application will help you better predict the success of yours, or somebody
+    else's Kickstarter campaign! Below are all of the devlopers who made this app possible. </p>
 </div>
 
+<div class=bio1>
+  <img src="https://ca.slack-edge.com/ESZCHB482-W014G4N0MAM-91c8ace7e38e-512" alt="">
+  <h2>Mason Davis</h2>
+  <p>Front-End Developer</p>
+</div>
+
+<div class=bio2>
+  <img src="https://ca.slack-edge.com/ESZCHB482-W0143MVPC1H-c91a898ff451-512" alt="">
+  <h2>Emmet Cleary</h2>
+  <p>Front-End Developer</p>
+</div>
+
+<div class=bio3>
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012XJ5QF17-44e03b7bab92-512" alt="">
+  <h2>Brian Griffiths</h2>
+  <p>Front-End Developer</p>
+</div>
+
+<div class=bio4>
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012JQ5JSPM-c15b8bea73e5-512" alt="">
+  <h2>Anh Truong</h2>
+  <p>Front-End Developer</p>
+</div>
+
+<div class=bio5>
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012JQ3PQGK-f3e077abc835-512" alt="">
+  <h2>Ben Simpson</h2>
+  <p>Back-End Devloper</p>
+</div>
+
+<div class=bio6>
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012QNY52QL-919d2fa696ec-512" alt="">
+  <h2>Jasim Rashid</h2>
+  <p>Data Engineering</p>
+</div>
+
+<div class=bio7>
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012JQ59ZJ7-db619202bd7a-512" alt="">
+  <h2>Jace Hambrick</h2>
+  <p>Data Engineering</p>
+</div>
+
+<div class=bio8>
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012H6T0AJ1-62330e14bbd0-512" alt="">
+  <h2>Ekram Ahmed</h2>
+  <p>Back-End Developer</p>
+</div>
+
+<div class=bio9>
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012X6YHZBK-3f32818aaa6e-512" alt="">
+  <h2>Luis Felipe Urena Hernandez</h2>
+  <p>Machine Learning Engineer</p>
+</div>
+
+<div class=bio10>
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012QNR0G2G-a7a80435887f-512" alt="">
+  <h2>Anika Nacey</h2>
+  <p>Front-End Devloper</p>
+</div>
+
+<div class=bio11>
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012BRS7GRL-ec630c66f8a1-512" alt="">
+  <h2>Antonio Peterson</h2>
+  <p>Project Lead</p>
+</div>
 
 
 <footer>
   <nav>
     <a href="#">Home</a>
     <a href="#">About</a>
-    <a href="#">Products</a>
-    <a href="#">Contact</a>
+    <a href="#">Overview</a>
+    <a href="https://kickstart-prediction.herokuapp.com/">Login</a>
   </nav>
 </footer>
-</div><!-- container -->
+</div>
 </body>
 
 </html>
