cleaning up index

--- a/index.html
+++ b/index.html
@@ -28,24 +28,56 @@
   <div id="header"></div>
 
   <div class="index">
-    <div class="within-index">
+    <div class="index-within">
       <!-- login -->
       <div class="join-container">
 	<img src="img/keyboard.jpg">
 	
-	<div class="line">
-	  <h2>Will you reach your Kickstarter goal?</h2>
-	</div>
-	<div class="line">
-	  <h2>Join today to see if you'll score!</h2>
-	</div>
+	<h2>Will you reach your Kickstarter goal?</h2>
+	<h2>Join today to see if you'll score!</h2>
 	<a href="https://kickstart-prediction.herokuapp.com/">
 	  Join today!
 	</a>
       </div>
-    </div>
-  </div>
 
+      <!-- Project -->
+      <!-- <div class="link-descriptions"> -->
+      <div class="join-container">
+	<img src="img/keyboard.jpg">
+	<h2>Project</h2>
+	<h2>This app helps predict whether or not your Kickstarter
+	  project will reach your goal.</h2>
+	<a href="project.html">
+	  Learn More
+	</a>
+      </div>
+
+      <!-- Reviews -->
+      <!-- <div class="link-descriptions"> -->
+      <div class="join-container">
+	<img src="img/keyboard.jpg">
+	<h2>Reviews</h2>
+	<h2>Many Kickstarter Creators use our app. Click here to read
+	  some of our top reviews! </h2>
+	<a href="reviews.html">
+	  Learn More
+	</a>
+      </div>
+
+      <!-- About -->
+      <!-- <div class="link-descriptions"> -->
+      <div class="join-container">
+	<img src="img/keyboard.jpg">
+	<h2>About Us</h2>
+	<p>Learn more about the development team!</p>
+	<a href="about.html">
+	  Learn More
+	</a>
+      </div>
+
+    </div>
+
+  </div>
   
   <div id="footer"></div>
   
