--- a/about.html
+++ b/about.html
@@ -33,9 +33,10 @@
     
     <section class="links">
       <nav>
-	<a href="#">Home</a>
-	<a href="#">About</a>
-	<a href="#">Overview</a>
+	<a href="index.html">Home</a>
+	<a href="about.html">About</a>
+	<a href="reviews.html">Reviews</a>
+	<a href="overview.html">Overview</a>
 	<a href="https://kickstart-prediction.herokuapp.com/">Login</a>
       </nav>
     </section>
