--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <footer id="myFooter">
   <nav class="links">
     <a href="index.html">Home</a>
-    <a href="project.html">Project</a>
+    <a href="overview.html">Overview</a>
     <a href="reviews.html">Reviews</a>
     <a href="about.html">About</a>
     <a href="https://kickstart-prediction.herokuapp.com/">Login</a>
