--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
     <h2>Kickstarter Goalie</h2>
     <nav class="links">
       <a href="index.html">Home</a>
-      <a href="project.html">Project</a>
+      <a href="overview.html">Overview</a>
       <a href="reviews.html">Reviews</a>
       <a href="about.html">About</a>
       <a href="https://kickstart-prediction.herokuapp.com/">Login</a>
