updated some figures; added adjustment

--- a/reviews.html
+++ b/reviews.html
@@ -38,7 +38,7 @@
 	    <img src="img/eggs.jpg">
 	  </div>
 	  <div class="review-txt">
-	    <h2>Title 1</h2>
+	    <h2>Easter Egg Decorator</h2>
 	    <p>This app gave me so much confidence in my project. I
 	      got to rest easy each night! 6 stars!</p>
 	  </div>
@@ -46,10 +46,10 @@
 	
 	<div class="review">
 	  <div class="review-img">
-	    <img src="img/eggs.jpg">
+	    <img src="img/oh.jpg">
 	  </div>
 	  <div class="review-txt">
-	    <h2>Title 2</h2>
+	    <h2>OH!</h2>
 	    <p>Finally, my Kickstarter project was successful, and it was
 	      all thanks to this app!</p>
 	  </div>
@@ -57,10 +57,10 @@
 	
 	<div class="review">
 	  <div class="review-img">
-	    <img src="img/eggs.jpg">
+	    <img src="img/colored_pencils.jpg">
 	  </div>
 	  <div class="review-txt">
-	    <h2>Title 3</h2>
+	    <h2>Colored Pencils</h2>
 	    <p>This app is free. Enough said. 5 stars.</p>
 	  </div>
 	</div>
