updated index images

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <!-- Project -->
       <!-- <div class="link-descriptions"> -->
       <div class="join-container">
-	<img src="img/keyboard.jpg">
-	<h2>Project</h2>
+	<img src="img/graph.jpg">
+	<h2>Overview</h2>
 	<h2>This app helps predict whether or not your Kickstarter
 	  project will reach your goal.</h2>
 	<a href="project.html">
@@ -55,7 +55,7 @@
       <!-- Reviews -->
       <!-- <div class="link-descriptions"> -->
       <div class="join-container">
-	<img src="img/keyboard.jpg">
+	<img src="img/eggs.jpg">
 	<h2>Reviews</h2>
 	<h2>Many Kickstarter Creators use our app. Click here to read
 	  some of our top reviews! </h2>
@@ -67,7 +67,7 @@
       <!-- About -->
       <!-- <div class="link-descriptions"> -->
       <div class="join-container">
-	<img src="img/keyboard.jpg">
+	<img src="img/remote.jpg">
 	<h2>About Us</h2>
 	<p>Learn more about the development team!</p>
 	<a href="about.html">
