added alternate to all links and images

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
     <div class="index-within">
       <!-- login -->
       <div class="join-container">
-	<img src="img/keyboard.jpg">
+	<img src="img/keyboard.jpg"
+	     alt="keyboard with Kickstarter labelled on Enter key">
 	
 	<h2>Will you reach your Kickstarter goal?</h2>
 	<h2>Join today to see if you'll score!</h2>
-	<a href="https://kickstart-prediction.herokuapp.com/">
+	<a href="https://kickstart-prediction.herokuapp.com/"
+	   alt="link to app login page">
 	  Join today!
 	</a>
       </div>
@@ -43,11 +45,13 @@
       <!-- Project -->
       <!-- <div class="link-descriptions"> -->
       <div class="join-container">
-	<img src="img/graph.jpg">
+	<img src="img/graph.jpg"
+	     alt="graph displayed on monitor">
 	<h2>Overview</h2>
 	<h2>This app helps predict whether or not your Kickstarter
 	  project will reach your goal.</h2>
-	<a href="project.html">
+	<a href="project.html"
+	   alt="link to Overview page describing the app">
 	  Learn More
 	</a>
       </div>
@@ -55,11 +59,13 @@
       <!-- Reviews -->
       <!-- <div class="link-descriptions"> -->
       <div class="join-container">
-	<img src="img/eggs.jpg">
+	<img src="img/eggs.jpg"
+	     alt="7 decorated eggs">
 	<h2>Reviews</h2>
 	<h2>Many Kickstarter Creators use our app. Click here to read
 	  some of our top reviews! </h2>
-	<a href="reviews.html">
+	<a href="reviews.html"
+	   alt="link to Reviews page">
 	  Learn More
 	</a>
       </div>
@@ -67,10 +73,12 @@
       <!-- About -->
       <!-- <div class="link-descriptions"> -->
       <div class="join-container">
-	<img src="img/remote.jpg">
+	<img src="img/remote.jpg"
+	     alt="picture of a remote control">
 	<h2>About Us</h2>
 	<p>Learn more about the development team!</p>
-	<a href="about.html">
+	<a href="about.html"
+	   alt="link to About page">
 	  Learn More
 	</a>
       </div>
