--- a/reviews.html
+++ b/reviews.html
@@ -35,7 +35,8 @@
 
 	<div class="review">
 	  <div class="review-img">
-	    <img src="img/eggs.jpg">
+	    <img src="img/eggs.jpg"
+		 alt="7 decorated eggs">
 	  </div>
 	  <div class="review-txt">
 	    <h2>Easter Egg Decorator</h2>
@@ -46,7 +47,8 @@
 	
 	<div class="review">
 	  <div class="review-img">
-	    <img src="img/oh.jpg">
+	    <img src="img/oh.jpg"
+		 alt="the letter H next to a doorhole">
 	  </div>
 	  <div class="review-txt">
 	    <h2>OH!</h2>
@@ -57,7 +59,8 @@
 	
 	<div class="review">
 	  <div class="review-img">
-	    <img src="img/colored_pencils.jpg">
+	    <img src="img/colored_pencils.jpg"
+		 alt="a collection of colored pencils">
 	  </div>
 	  <div class="review-txt">
 	    <h2>Colored Pencils</h2>
