--- a/header.html
+++ b/header.html
@@ -2,11 +2,11 @@
   <div class="header-nav">
     <h2>Kickstarter Goalie</h2>
     <nav class="links">
-      <a href="index.html">Home</a>
-      <a href="overview.html">Overview</a>
-      <a href="reviews.html">Reviews</a>
-      <a href="about.html">About</a>
-      <a href="https://kickstart-prediction.herokuapp.com/">Login</a>
+      <a href="index.html" alt="link to home page">Home</a>
+      <a href="overview.html" alt="link to app overview page">Overview</a>
+      <a href="reviews.html" alt="link to reviews page">Reviews</a>
+      <a href="about.html" alt="link to about page">About</a>
+      <a href="https://kickstart-prediction.herokuapp.com/" alt="link to login page">Login</a>
     </nav>
   </div>
   <div class="header-img">
