added transitions to header and footer links for accessibility

--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,11 @@
 <footer id="myFooter">
-  <nav class="links">
-    <a href="index.html" alt="link to home page">Home</a>
-    <a href="overview.html" alt="link to app overview page">Overview</a>
-    <a href="reviews.html" alt="link to reviews page">Reviews</a>
-    <a href="about.html" alt="link to about page">About</a>
-    <a href="https://kickstart-prediction.herokuapp.com/" alt="link to login page">Login</a>
-  </nav>
+  <div class="footer-nav">
+    <nav class="links">
+      <a href="index.html" alt="link to home page">Home</a>
+      <a href="overview.html" alt="link to app overview page">Overview</a>
+      <a href="reviews.html" alt="link to reviews page">Reviews</a>
+      <a href="about.html" alt="link to about page">About</a>
+      <a href="https://kickstart-prediction.herokuapp.com/" alt="link to login page">Login</a>
+    </nav>
+  </div>
 </footer>
