--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 <div class="top-img">
   <img
     src="https://a.kickstarter.com/assets/site/social/og-kickstarter-social-new-d68ea5b8257b3ff7ec063993ddc0f9662494309832feb40117fc936fa1c819a2.png"
-    alt="This Image Could Not Be Displayed">
+    alt="Image of Kickstarter Logo">
 </div>
 
 <div class="mission">
@@ -41,67 +41,68 @@
 </div>
 
 <div class=bio1>
-  <img src="https://ca.slack-edge.com/ESZCHB482-W014G4N0MAM-91c8ace7e38e-512" alt="">
+  <img src="https://ca.slack-edge.com/ESZCHB482-W014G4N0MAM-91c8ace7e38e-512" alt="Image of Mason Davis">
   <h2>Mason Davis</h2>
   <p>Front-End Developer</p>
 </div>
 
 <div class=bio2>
-  <img src="https://ca.slack-edge.com/ESZCHB482-W0143MVPC1H-c91a898ff451-512" alt="">
+  <img src="https://ca.slack-edge.com/ESZCHB482-W0143MVPC1H-c91a898ff451-512" alt="Image of Emmet Cleary">
   <h2>Emmet Cleary</h2>
   <p>Front-End Developer</p>
 </div>
 
 <div class=bio3>
-  <img src="https://ca.slack-edge.com/ESZCHB482-W012XJ5QF17-44e03b7bab92-512" alt="">
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012XJ5QF17-44e03b7bab92-512" alt="Image of Brian Griffiths">
   <h2>Brian Griffiths</h2>
   <p>Front-End Developer</p>
 </div>
 
 <div class=bio4>
-  <img src="https://ca.slack-edge.com/ESZCHB482-W012JQ5JSPM-c15b8bea73e5-512" alt="">
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012JQ5JSPM-c15b8bea73e5-512" alt="Image of Anh Truong">
   <h2>Anh Truong</h2>
   <p>Front-End Developer</p>
 </div>
 
 <div class=bio5>
-  <img src="https://ca.slack-edge.com/ESZCHB482-W012JQ3PQGK-f3e077abc835-512" alt="">
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012JQ3PQGK-f3e077abc835-512" alt="Image of Ben Simpson">
   <h2>Ben Simpson</h2>
   <p>Back-End Devloper</p>
 </div>
 
 <div class=bio6>
-  <img src="https://ca.slack-edge.com/ESZCHB482-W012QNY52QL-919d2fa696ec-512" alt="">
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012QNY52QL-919d2fa696ec-512" alt="Image of Jasim Rashid">
   <h2>Jasim Rashid</h2>
   <p>Data Engineering</p>
 </div>
 
 <div class=bio7>
-  <img src="https://ca.slack-edge.com/ESZCHB482-W012JQ59ZJ7-db619202bd7a-512" alt="">
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012JQ59ZJ7-db619202bd7a-512" alt="Image of Jace Hambrick">
   <h2>Jace Hambrick</h2>
   <p>Data Engineering</p>
 </div>
 
 <div class=bio8>
-  <img src="https://ca.slack-edge.com/ESZCHB482-W012H6T0AJ1-62330e14bbd0-512" alt="">
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012H6T0AJ1-62330e14bbd0-512" alt="Image of Ekram Ahmed">
   <h2>Ekram Ahmed</h2>
   <p>Back-End Developer</p>
 </div>
 
 <div class=bio9>
-  <img src="https://ca.slack-edge.com/ESZCHB482-W012X6YHZBK-3f32818aaa6e-512" alt="">
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012X6YHZBK-3f32818aaa6e-512"
+    alt="Image of Luis Felipe Urena Hernandez">
   <h2>Luis Felipe Urena Hernandez</h2>
   <p>Machine Learning Engineer</p>
 </div>
 
 <div class=bio10>
-  <img src="https://ca.slack-edge.com/ESZCHB482-W012QNR0G2G-a7a80435887f-512" alt="">
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012QNR0G2G-a7a80435887f-512" alt="Image of Anika Nacey">
   <h2>Anika Nacey</h2>
   <p>Front-End Devloper</p>
 </div>
 
 <div class=bio11>
-  <img src="https://ca.slack-edge.com/ESZCHB482-W012BRS7GRL-ec630c66f8a1-512" alt="">
+  <img src="https://ca.slack-edge.com/ESZCHB482-W012BRS7GRL-ec630c66f8a1-512" alt="Image of Antonio Peterson">
   <h2>Antonio Peterson</h2>
   <p>Project Lead</p>
 </div>
