updated abouts links

--- a/about.html
+++ b/about.html
@@ -17,9 +17,10 @@
 
 <section class="links">
   <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Overview</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="reviews.html">Reviews</a>
+    <a href="overview.html">Overview</a>
     <a href="https://kickstart-prediction.herokuapp.com/">Login</a>
   </nav>
 </section>
@@ -110,9 +111,10 @@
 
 <footer>
   <nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Overview</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="reviews.html">Reviews</a>
+    <a href="overview.html">Overview</a>
     <a href="https://kickstart-prediction.herokuapp.com/">Login</a>
   </nav>
 </footer>
